# EPITECH_Tek3_Projects

./: .gitignore
AppDev/DashBoard/: README.md  docker-compose.yml
AppDev/DashBoard/app/: Dockerfile
AppDev/Epicture/: settings.gradle
AppDev/Epicture/app/: build.gradle
DevOps/Bernstein/B-DOP-500-RUN-5-1-bernstein-jean-michel.grondin/: cadvisor.daemonset.yaml  poll.deployment.yaml  poll.ingress.yaml  poll.service.yaml  postgres.configmap.yaml  redis.service.yaml  result.deployment.yaml  result.service.yaml  traefik.deployment.yaml  worker.deployment.yaml
DevOps/Bernstein/Project/: .gitignore  postgres.deployment.yaml  postgres.secret.yaml  postgres.service.yaml  (+6 more)
EcritPro/3_emails/: B5-MP2-3emails-jean-michel.grondin-Saint_Andre.docx
EcritPro/avocat_du_diable/: B5AVOCAT-jean-michel.grondin-Saint_Andre.docx
OOP/babel/B-CPP-500-RUN-5-1-babel-dorian.payet/: CMakeLists.txt  main.cpp  test1_babel.7z
OOP/babel/B-CPP-500-RUN-5-1-babel-dorian.payet/include/: AudioDataContainer.hpp  ClientCommunication.hpp  ContactList.hpp  Datagram.hpp  ICompressor.hpp  Interface.h  MyError.hpp  NetworkManager.hpp  Opus.hpp  PortAudio.hpp  askfor.h  soundtab.h
OOP/babel/B-CPP-500-RUN-5-1-babel-dorian.payet/src/: AudioDataContainer.cpp  ClientCommunication.cpp  ContactList.cpp  Interface.cpp  MyError.cpp  PackageManager.cpp  Window.cpp  askfor.cpp  askforchat.ui  chattab.cpp  main.cpp
YearEndProject/: README.md  docker-compose.yml
YearEndProject/api/: Dockerfile
YearEndProject/app/: Dockerfile
YearEndProject/mobile/: Dockerfile
YearEndProject/robot/: Dockerfile
(+212 files in other folders)
